Issue #1672358: Image thumbnails on product pages on mobile devices should behave differently.
Reviewed-on: https://code.drupalcommerce.org/248
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
@@ -402,6 +402,12 @@ body {
 .commerce-add-to-cart label {
   float: left;
 }
+/* Cloud zoom */
+.cloud-zoom-big,
+.mousetrap,
+.cloud-zoom-lens {
+  display: inherit !important;
+}
 /**********************************************
 * 5.4. Checkout process
 **********************************************/
